# Kemono-Tools

./: .gitignore  Kemono API 1.3.0 OAS 3.1.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  downloader.rs  html_generator.rs  lib.rs  settings.rs
src/components/: DownloadPath.tsx  DownloadStatus.tsx  LoginForm.tsx  PostItem.tsx  PostList.tsx  ServiceSelector.tsx  Skeleton.tsx  UserSearch.tsx
src/components/__tests__/: DownloadStatus.test.tsx  PostList.test.tsx  ServiceSelector.test.tsx  Skeleton.test.tsx  UserSearch.test.tsx
src/hooks/: usePosts.ts  useSettings.ts
src/styles/: globals.css
tests/: Cargo.toml  api_integration.rs
