[package]
name = "app"
version = "0.1.0"
description = "Kemono post viewer and file downloader"
authors = ["Kamilake"]
license = "MIT"
repository = "https://github.com/Kamilake/Kemono-Tools"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
urlencoding = "2"
dirs = "6"
sha2 = "0.10"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
