[package]
name = "kemono-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "api_integration"
path = "api_integration.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2"
